# insurance-ml-system

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: schema.json
pipelines/: generate_data.py
